--- a/shortener/Dockerfile
+++ b/shortener/Dockerfile
@@ -2,5 +2,5 @@ FROM golang:alpine
 ADD src/ /server/
 WORKDIR /server/
 RUN go get github.com/redis/go-redis/v9
-RUN go build -o shortener .
-CMD ./shortener
+RUN go build -o URLShort .
+CMD ./URLShort
